[gd_scene load_steps=35 format=3 uid="uid://bkkjeqebf3rsv"]

[ext_resource type="Script" path="res://GUI/final.gd" id="1_1t5ay"]
[ext_resource type="FontVariation" uid="uid://c5nyi8stdd14c" path="res://Src/Fonts/main_font.tres" id="1_4lo82"]
[ext_resource type="Texture2D" uid="uid://dj84wy3spxx8k" path="res://Players/NPC/Girlfriend/GirlfriendVictory/Happy.png" id="3_q0csa"]
[ext_resource type="Texture2D" uid="uid://c8hbmq7tra5xt" path="res://Players/Sprites/PlayerVictory/Happy.png" id="4_3tsp5"]
[ext_resource type="Texture2D" uid="uid://l6apn3nt0gt7" path="res://Players/NPC/Girlfriend/GirlfriendDIe/Punk_death.png" id="5_g0dyt"]
[ext_resource type="Texture2D" uid="uid://q628cokki4bq" path="res://Players/Sprites/PlayerDeath/Cyborg_death.png" id="6_yqbi6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oiqxl"]
atlas = ExtResource("3_q0csa")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttdp3"]
atlas = ExtResource("3_q0csa")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2bl5"]
atlas = ExtResource("3_q0csa")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8s8i6"]
atlas = ExtResource("3_q0csa")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6gvu"]
atlas = ExtResource("3_q0csa")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bnxe"]
atlas = ExtResource("3_q0csa")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ffqk7"]
animations = [{
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_oiqxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttdp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2bl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s8i6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6gvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bnxe")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_nuod8"]
atlas = ExtResource("4_3tsp5")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3v82"]
atlas = ExtResource("4_3tsp5")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5obkc"]
atlas = ExtResource("4_3tsp5")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_10bu3"]
atlas = ExtResource("4_3tsp5")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_244gf"]
atlas = ExtResource("4_3tsp5")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_milmy"]
atlas = ExtResource("4_3tsp5")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_362ap"]
animations = [{
"frames": [{
"duration": 0.2,
"texture": SubResource("AtlasTexture_nuod8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3v82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5obkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10bu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_244gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_milmy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xiopn"]
atlas = ExtResource("5_g0dyt")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i50bb"]
atlas = ExtResource("5_g0dyt")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsa2e"]
atlas = ExtResource("5_g0dyt")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_grop8"]
atlas = ExtResource("5_g0dyt")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi2i2"]
atlas = ExtResource("5_g0dyt")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1avv0"]
atlas = ExtResource("5_g0dyt")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ya5j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xiopn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i50bb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsa2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grop8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi2i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1avv0")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_caqk1"]
atlas = ExtResource("6_yqbi6")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ykaa"]
atlas = ExtResource("6_yqbi6")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt1ra"]
atlas = ExtResource("6_yqbi6")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjm63"]
atlas = ExtResource("6_yqbi6")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cimi7"]
atlas = ExtResource("6_yqbi6")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fji45"]
atlas = ExtResource("6_yqbi6")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_qsswq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_caqk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ykaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt1ra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjm63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cimi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fji45")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Final" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1t5ay")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.235294, 0, 0.376471, 1)

[node name="Next" type="Button" parent="."]
custom_minimum_size = Vector2(226, 31)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -909.0
offset_top = -123.0
offset_right = -683.0
offset_bottom = -81.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_4lo82")
theme_override_font_sizes/font_size = 36
text = "Выйти в меню"

[node name="MainText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -601.0
offset_top = -326.0
offset_right = 601.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_4lo82")
theme_override_font_sizes/font_size = 64
text = "Поздравляем, ты всё прошел!

Надеемся, ты весело провел несколько минут своей жизни. Будем рады оценочке, комментарию, а также приятного времяпрепровождения в играх других команд :)"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TimeHeader" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -363.0
offset_top = 56.0
offset_right = 221.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_4lo82")
theme_override_font_sizes/font_size = 64
text = "Твое итоговое время: "
vertical_alignment = 1
autowrap_mode = 2

[node name="TimeStamp" type="Label" parent="TimeHeader"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -39.0
offset_right = 133.0
offset_bottom = 39.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_4lo82")
theme_override_font_sizes/font_size = 64
text = "00:00"
vertical_alignment = 1
autowrap_mode = 2

[node name="NameHeader" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -363.0
offset_top = 124.0
offset_right = 221.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_4lo82")
theme_override_font_sizes/font_size = 64
text = "Твое генеренное имя: "
vertical_alignment = 1
autowrap_mode = 2

[node name="NameStamp" type="Label" parent="NameHeader"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -39.0
offset_right = 133.0
offset_bottom = 39.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_4lo82")
theme_override_font_sizes/font_size = 64
text = "ABCDEFG"
vertical_alignment = 1
autowrap_mode = 2

[node name="FriendHeader" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = 208.0
offset_right = 109.0
offset_bottom = 306.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_4lo82")
theme_override_font_sizes/font_size = 64
text = "Кол-во спасенных друзей:"
vertical_alignment = 1
autowrap_mode = 2

[node name="FriendStamp" type="Label" parent="FriendHeader"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 78.0
offset_top = -38.0
offset_right = 246.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_4lo82")
theme_override_font_sizes/font_size = 64
text = "0"
vertical_alignment = 1
autowrap_mode = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="VictoryWoman" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1312, 736)
scale = Vector2(4.02083, 4.02083)
sprite_frames = SubResource("SpriteFrames_ffqk7")
animation = &"new_animation"
frame_progress = 0.987741

[node name="VictoryMan" type="AnimatedSprite2D" parent="."]
process_mode = 3
visible = false
position = Vector2(1448, 728)
scale = Vector2(4.3125, 4.3125)
sprite_frames = SubResource("SpriteFrames_362ap")
frame_progress = 0.435615
flip_h = true

[node name="FailWoman" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1312, 736)
scale = Vector2(4.021, 4.021)
sprite_frames = SubResource("SpriteFrames_3ya5j")
frame = 5
frame_progress = 1.0

[node name="FailMan" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1448, 728)
scale = Vector2(4.313, 4.313)
sprite_frames = SubResource("SpriteFrames_qsswq")
flip_h = true

[connection signal="mouse_entered" from="Next" to="." method="_on_start_mouse_entered"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
